--- a/TuneHub/src/app/Components/Shared/header/header.component.css
+++ b/TuneHub/src/app/Components/Shared/header/header.component.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-    z-index: 100;
+  
   /* גבוה מאוד */
   /* background: rgba(255,255,255,0.3); שקוף */
 }
@@ -268,7 +268,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
- 
+
   /* margin: 15px 15px; */
   /* margin-top: 16px; */
   border-radius: 0 0 45px 45px;
@@ -280,13 +280,10 @@ header {
 
   backdrop-filter: blur(12px);
   
-  
+     z-index: 100000000000000 !important;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.1);   /* קו לבן דק ושקוף */
 }
-
-
-
 
 
 
