--- a/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.html
+++ b/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.html
@@ -4,31 +4,42 @@
     <div class="cover-wrapper">
       <img src="./assets/images/sheets_music.webp" class="cover-image" />
 
+
       <div class="overlay-content">
-        <div class="title-section">
-          <h1 class="musicians" style="font-size: 60px;">Sheet Music Library</h1>
-          <p style="font-size: 25px;color: #ffffff;">Discover, learn, and share musical scores from around the world</p>
+        <div class="header-inner-content">
+
+          <div class="title-section">
+            <h1 class="musicians" style="font-size: 60px;">Sheet Music Library</h1>
+            <p style="font-size: 25px;color: #ffffff;">Discover, learn, and share musical scores from around the world
+            </p>
+          </div>
+          <button class="button" (click)="openUploadModal()">
+            <!-- join-network-btn -->
+            <!-- <span class="icon">🧑</span> -->
+
+            <mat-icon>upload</mat-icon>
+
+
+            UploadSheetMusic
+          </button>
+
         </div>
-        <button class="button join-network-btn" (click)="openUploadModal()">
-          <!-- <span class="icon">🧑</span> -->
 
-          <mat-icon>upload</mat-icon>
+        @if(uploadSheetMusicService.isOpen){
+            <app-upload-sheet-music></app-upload-sheet-music>
+        <!-- (uploadSuccess)="loadSheets()" -->
 
-
-          UploadSheetMusic
-        </button>
-        <!-- <button class="button" (click)="openUploadModal()">Upload New Sheet</button> -->
-<!-- 
-@if(uploadSheetMusicService.isOpen){
-    <app-upload-sheet-music 
-        (uploadSuccess)="loadSheets()"> </app-upload-sheet-music>
-} -->
+        }
         
+
       </div>
     </div>
 
 
+
   </header>
+
+
   <div class="sheet-music-container">
 
     @for (sheet of sheetMusicList; track sheet.id) {
@@ -39,25 +50,24 @@
 
         <div class="cover-image">
           <div class="pdf-preview-half">
-            @if (sheet.filePath) {
-            <iframe [src]="getSafeMediaUrl(sheet.filePath)" class="file-preview-iframe"
-              title="תצוגה מקדימה של {{ sheet.name }}" allowfullscreen>
-            </iframe>
-            } @else {
+
+            <img [src]="getImageCoverPath(sheet)" class="file-preview-iframe">
+
             <div class="no-preview-overlay">
               אין תצוגה מקדימה
             </div>
-            }
+
           </div>
         </div>
 
         <!-- ONLY CATEGORY + DIFFICULTY (LIKE THE IMAGE) -->
         <div class="badge-group">
+          @for (category of sheet.categories; track category) {
           <span class="badge category">
             <mat-icon>folder</mat-icon>
-            {{ sheet.category?.name }}
+            {{ category.name }}
           </span>
-
+          }
 
 
 
@@ -71,7 +81,7 @@
       <!-- BODY -->
       <div class="card-content">
 
-        <h3 class="title">{{ sheet.name }}</h3>
+        <h3 class="title">{{ sheet.title }}</h3>
 
         <!-- BY + profile -->
         <p class="artist-legacy">
@@ -140,12 +150,12 @@
             {{ sheet.likes }}
           </span>
         </span>
-	
+
 
 
         <span class="stat-item hearts" (click)="toggleFavorite(sheet)">
           <mat-icon style="color: #f85e5e;" ngClass="sheet.isFavorite ? 'liked' : 'not-liked'">
-            {{ sheet.hearts  ? 'favorite' : 'favorite_border' }}
+            {{ sheet.hearts ? 'favorite' : 'favorite_border' }}
           </mat-icon>
 
           <span class="hearts-count">
