--- a/TuneHub/src/app/Components/Comments/comment/comment.component.html
+++ b/TuneHub/src/app/Components/Comments/comment/comment.component.html
@@ -3,7 +3,7 @@
     <div class="comment-header">
 <img 
   class="comment-avatar" 
-  [src]="getProfileImage(c.profile?.imageProfilePath || null)" 
+  [src]="fileUtilsService.getImageUrl(c.profile!.imageProfilePath || null)" 
   alt="avatar"
 />
       <span class="comment-username">{{ c.profile.name }}</span>
@@ -11,6 +11,12 @@
 
     <p class="comment-content">{{ c.content }}</p>
     <small class="comment-date">{{ c.dateUploaded }}</small>
+     <span class="stat-item likes" (click)="toggleLike(c)">
+            <mat-icon style="color: #f0ff6c;" [ngClass]="c.isLiked ? 'liked' : 'not-liked'">
+              {{ c.isLiked ? 'thumb_up' : 'thumb_up_off_alt' }}
+            </mat-icon>
+            <span class="like-count">{{ c.likes }}</span>
+          </span>
     <hr>
   </div>
 
