--- a/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.html
+++ b/TuneHub/src/app/Components/SheetMusic/sheets-music/sheets-music.component.html
@@ -22,8 +22,10 @@
         </div>
 
         @if (uploadSheetMusicService.isOpen) {
-          <app-upload-sheet-music></app-upload-sheet-music>
+        <app-upload-sheet-music></app-upload-sheet-music>
         }
+        <!-- <app-upload-sheet-music *ngIf="uploadSheetMusicService.isOpen"></app-upload-sheet-music> -->
+
 
       </div>
     </div>
@@ -32,9 +34,18 @@
 
   <!-- SEARCH BAR -->
   <section class="search-bar">
-    <div class="search-input-group">
-      <span class="search-icon">🔍</span>
-      <input type="text" placeholder="Search musicians by name, instrument, or skills..." />
+    
+    <div class="search-container" onclick="document.getElementById('qs').focus()">
+      <mat-icon>search</mat-icon>
+
+      <input id="qs" 
+           class="search-input" 
+           type="search" 
+           placeholder="Search musicians, tracks, lessons..."
+           aria-label="search"
+           [(ngModel)]="searchText"
+           (ngModelChange)="onSearchChange($event)" 
+           />
     </div>
 
     <select class="dropdown">
@@ -51,42 +62,36 @@
   </section>
 
   @if (showFilters) {
-    <section class="additional-filters">
+  <section class="additional-filters">
 
-      <div class="filter-group">
-        <label>כלי נגינה</label>
-        <select class="dropdown"
-                [(ngModel)]="selectedInstrument"
-                (change)="applyFilters()">
-          @for (instrument of instruments; track instrument) {
-            <option [value]="instrument">{{ instrument }}</option>
-          }
-        </select>
-      </div>
+    <div class="filter-group">
+      <label>כלי נגינה</label>
+      <select class="dropdown" [(ngModel)]="selectedInstrument" (change)="applyFilters()">
+        @for (instrument of instruments; track instrument) {
+        <option [value]="instrument">{{ instrument }}</option>
+        }
+      </select>
+    </div>
 
-      <div class="filter-group">
-        <label>סולם</label>
-        <select class="dropdown"
-                [(ngModel)]="selectedScale"
-                (change)="applyFilters()">
-          @for (scale of scales; track scale) {
-            <option [value]="scale">{{ scale }}</option>
-          }
-        </select>
-      </div>
+    <div class="filter-group">
+      <label>סולם</label>
+      <select class="dropdown" [(ngModel)]="selectedScale" (change)="applyFilters()">
+        @for (scale of scales; track scale) {
+        <option [value]="scale">{{ scale }}</option>
+        }
+      </select>
+    </div>
 
-      <div class="filter-group">
-        <label>רמת קושי</label>
-        <select class="dropdown"
-                [(ngModel)]="selectedLevel"
-                (change)="applyFilters()">
-          @for (level of levels; track level) {
-            <option [value]="level">{{ level }}</option>
-          }
-        </select>
-      </div>
+    <div class="filter-group">
+      <label>רמת קושי</label>
+      <select class="dropdown" [(ngModel)]="selectedLevel" (change)="applyFilters()">
+        @for (level of levels; track level) {
+        <option [value]="level">{{ level }}</option>
+        }
+      </select>
+    </div>
 
-    </section>
+  </section>
   }
 
 
@@ -95,111 +100,108 @@
 
     @for (sheet of sheetMusicList; track sheet.id) {
 
-      <div class="music-card">
+    <div class="music-card">
 
-        <!-- COVER -->
-        <div class="cover-image">
-          <div class="pdf-preview-half">
+      <!-- COVER -->
+      <div class="cover-image">
+        <div class="pdf-preview-half">
 
-            <img [src]="getImageCoverPath(sheet)" class="file-preview-iframe" />
+          <img [src]="getImageCoverPath(sheet)" class="file-preview-iframe" />
 
-            <div class="no-preview-overlay">
-              אין תצוגה מקדימה
-            </div>
+          <div class="no-preview-overlay">
+            אין תצוגה מקדימה
+          </div>
+
+        </div>
+      </div>
+
+      <!-- BADGES -->
+      <div class="badge-group">
+
+        @for (category of sheet.categories; track category) {
+        <span class="badge category">
+          <mat-icon>folder</mat-icon>
+          {{ category.name }}
+        </span>
+        }
+
+        <span class="badge difficulty {{ sheet.level }}">
+          {{ sheet.level }}
+        </span>
+
+      </div>
+
+      <!-- CARD CONTENT -->
+      <div class="card-content">
+    <h3 class="title" [innerHTML]="sheet.title! | highlight: searchText"></h3>
+        <p class="artist-legacy">
+          <span class="artist-mini-profile" (click)="navigationService.goToProfile(sheet.user!.id!)">
+            <img [src]="fileUtilsService.getImageUrl(sheet.user!.imageProfilePath)" class="artist-mini-img"
+              alt="Profile" />
+            <span>{{ sheet.user!.name }}</span>
+          </span>
+        </p>
+
+        <div class="details-row">
+          
+  
+          <div class="primary-tags">
+
+            <span class="detail-tag">
+              <mat-icon>description</mat-icon>
+              {{ sheet.pages }}
+            </span>
+
+            <span class="detail-tag">
+              <mat-icon>music_note</mat-icon>
+              {{ sheet.scale }}
+            </span>
+
+            <span class="detail-tag">
+              @for (instrument of sheet.instruments; track instrument.id) {
+              {{ instrument.name }}@if (!$last) { <span>, </span> }
+              }
+            </span>
 
           </div>
         </div>
 
-        <!-- BADGES -->
-        <div class="badge-group">
+        <div class="stats-row">
 
-          @for (category of sheet.categories; track category) {
-            <span class="badge category">
-              <mat-icon>folder</mat-icon>
-              {{ category.name }}
-            </span>
-          }
+          <span class="stat-item">
+            <mat-icon>download</mat-icon>
+            {{ sheet.downloads }}
+          </span>
 
-          <span class="badge difficulty {{ sheet.level }}">
-            {{ sheet.level }}
+          <span class="stat-item likes" (click)="toggleLike(sheet)">
+            <mat-icon style="color: #f0ff6c;" [ngClass]="sheet.isLiked ? 'liked' : 'not-liked'">
+              {{ sheet.isLiked ? 'thumb_up' : 'thumb_up_off_alt' }}
+            </mat-icon>
+            <span class="like-count">{{ sheet.likes }}</span>
+          </span>
+
+          <span class="stat-item hearts" (click)="toggleFavorite(sheet)">
+            <mat-icon style="color: #f85e5e;" [ngClass]="sheet.isFavorite ? 'liked' : 'not-liked'">
+              {{ sheet.isFavorite ? 'favorite' : 'favorite_border' }}
+            </mat-icon>
+
+            <span class="hearts-count">{{ sheet.hearts }}</span>
           </span>
 
         </div>
 
-        <!-- CARD CONTENT -->
-        <div class="card-content">
+        <button class="button" (click)="goToSheetMusic(sheet)">
+          VIEW
+        </button>
 
-          <h3 class="title">{{ sheet.title }}</h3>
+      </div> <!-- END card-content -->
 
-          <p class="artist-legacy">
-            <span class="artist-mini-profile"
-                  (click)="navigationService.goToProfile(sheet.user!.id!)">
-              <img
-                [src]="fileUtilsService.getImageUrl(sheet.user!.imageProfilePath)"
-                class="artist-mini-img"
-                alt="Profile"
-              />
-              <span>{{ sheet.user!.name }}</span>
-            </span>
-          </p>
-
-          <div class="details-row">
-            <div class="primary-tags">
-
-              <span class="detail-tag">
-                <mat-icon>description</mat-icon>
-                {{ sheet.pages }}
-              </span>
-
-              <span class="detail-tag">
-                <mat-icon>music_note</mat-icon>
-                {{ sheet.scale }}
-              </span>
-
-              <span class="detail-tag">
-                @for (instrument of sheet.instruments; track instrument.id) {
-                  {{ instrument.name }}@if (!$last) { <span>, </span> }
-                }
-              </span>
-
-            </div>
-          </div>
-
-          <div class="stats-row">
-
-            <span class="stat-item">
-              <mat-icon>download</mat-icon>
-              {{ sheet.downloads }}
-            </span>
-
-            <span class="stat-item likes" (click)="toggleLike(sheet)">
-              <mat-icon style="color: #f0ff6c;" ngClass="sheet.isLiked ? 'liked' : 'not-liked'">
-                {{ sheet.isLiked ? 'thumb_up' : 'thumb_up_off_alt' }}
-              </mat-icon>
-              <span class="like-count">{{ sheet.likes }}</span>
-            </span>
-
-            <span class="stat-item hearts" (click)="toggleFavorite(sheet)">
-              <mat-icon style="color: #f85e5e;" ngClass="sheet.isFavorite ? 'liked' : 'not-liked'">
-                {{ sheet.hearts ? 'favorite' : 'favorite_border' }}
-              </mat-icon>
-              <span class="hearts-count">{{ sheet.hearts }}</span>
-            </span>
-
-          </div>
-
-          <button class="button" (click)="goToSheetMusic(sheet)">
-            VIEW
-          </button>
-
-        </div> <!-- END card-content -->
-
-      </div> <!-- END music-card -->
+    </div> <!-- END music-card -->
 
     }
 
     @empty {
-      <div class="no-results">לא נמצאו גיליונות מוזיקליים להצגה.</div>
+    <div class="no-results">לא נמצאו גיליונות מוזיקליים להצגה.</div>
     }
 
   </div>
